Fix SonarQube issues (1) (#2204)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>